range: Set stepper style classes according to orientation

https://bugzilla.gnome.org/show_bug.cgi?id=769498